cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(src/lib)
ADD_SUBDIRECTORY(src/examples)

set(THIS_PROJECT_NAME "EventLoop")
set(CPACK_PACKAGE_DESCRIPTION_FILE ${PROJECT_SOURCE_DIR}/README)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${THIS_PROJECT_NAME})
set(CPACK_PACKAGE_NAME ${THIS_PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "Nokia")

set(CPACK_GENERATOR "RPM")
set(CPACK_RPM_COMPONENT_INSTALL 0)
set(CPACK_RPM_PACKAGE_GROUP ${THIS_PROJECT_NAME})
set(CPACK_RPM_PACKAGE_AUTOREQPROV 0)
include(CPack)
